Constraintprog/minizinc-1.6/tests/parsing/flatzinc/f-empty-bad.fzn_yacc.err_exp
f-empty-bad.fzn:3: syntax error before end of file
