Constraintprog/minizinc-1.6/tests/parsing/flatzinc/f-empty-bad.fzn
% RUNS ON fzn_yacc
% RUNS ON fzn_parse
